--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -69,4 +69,11 @@
     <!-- Biometric Prompt -->
     <dimen name="biometric_dialog_fod_margin">44dp</dimen>
 
+
+    <!-- Clear all notifications button -->
+    <dimen name="dismiss_all_button_elevation">10dp</dimen>
+    <dimen name="dismiss_all_button_height_width">58dp</dimen>
+    <dimen name="dismiss_all_button_margin_bottom">35dp</dimen>
+    <dimen name="dismiss_all_fab_src_size">30dp</dimen>
+
 </resources>
