--- a/packages/SystemUI/res/layout/biometric_dialog.xml
+++ b/packages/SystemUI/res/layout/biometric_dialog.xml
@@ -106,7 +106,7 @@
                             android:layout_width="@dimen/biometric_dialog_biometric_icon_size"
                             android:layout_height="@dimen/biometric_dialog_biometric_icon_size"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="48dp"
+                            android:layout_marginTop="24dp"
                             android:scaleType="fitXY" />
 
                         <TextView
@@ -115,8 +115,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="24dp"
                             android:layout_marginStart="24dp"
-                            android:paddingTop="@dimen/fp_dialog_error_padding_top"
-                            android:paddingBottom="@dimen/fp_dialog_error_padding_bottom"
+                            android:paddingTop="16dp"
+                            android:paddingBottom="24dp"
                             android:textSize="12sp"
                             android:gravity="center_horizontal"
                             android:accessibilityLiveRegion="polite"
