--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -20,14 +20,6 @@
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">@dimen/keyguard_indication_margin_bottom</dimen>
 
-    <!-- Custom padding size on biometric dialog -->
-    <dimen name="fp_dialog_error_padding_top">16dp</dimen>
-    <dimen name="fp_dialog_error_padding_bottom">24dp</dimen>
-
-    <!-- Custom padding size on biometric dialog when fingerprint in display is active -->
-    <dimen name="fp_dialog_error_padding_top_fingerprint_in_display">@dimen/fp_dialog_error_padding_top</dimen>
-    <dimen name="fp_dialog_error_padding_bottom_fingerprint_in_display">72dp</dimen>
-
     <!-- Custom cutout overlay view sizes -->
     <dimen name="config_customCutoutTopWidth">0.0px</dimen>
     <dimen name="config_customCutoutTopHeight">0.0px</dimen>
@@ -48,5 +40,33 @@
     <!-- Volume panel -->
     <dimen name="volume_dialog_panel_transparent_padding_left">20dp</dimen>
     <dimen name="volume_dialog_panel_land_margin">68dp</dimen>
+
+    <!-- Tri-state UI -->
+    <dimen name="tri_state_down_dialog_position">850.0px</dimen>
+    <dimen name="tri_state_down_dialog_position_l">650.0px</dimen>
+    <dimen name="tri_state_middle_dialog_position">650.0px</dimen>
+    <dimen name="tri_state_middle_dialog_position_l">650.0px</dimen>
+    <dimen name="tri_state_up_dialog_position">450.0px</dimen>
+    <dimen name="tri_state_up_dialog_position_l">650.0px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep">21.0px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep_land">21.0px</dimen>
+    <dimen name="tri_state_dialog_elevation">4.0dip</dimen>
+    <dimen name="tri_state_dialog_icon_size">24.0dip</dimen>
+    <dimen name="tri_state_dialog_padding">8.0dip</dimen>
+    <dimen name="tri_state_down_bottom_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_down_bottom_right_radius">24.0dip</dimen>
+    <dimen name="tri_state_down_top_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_down_top_right_radius">0.0dip</dimen>
+    <dimen name="tri_state_mid_bottom_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_mid_bottom_right_radius">24.0dip</dimen>
+    <dimen name="tri_state_mid_top_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_mid_top_right_radius">24.0dip</dimen>
+    <dimen name="tri_state_up_bottom_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_up_bottom_right_radius">0.0dip</dimen>
+    <dimen name="tri_state_up_top_left_radius">24.0dip</dimen>
+    <dimen name="tri_state_up_top_right_radius">24.0dip</dimen>
+
+    <!-- Biometric Prompt -->
+    <dimen name="biometric_dialog_fod_margin">44dp</dimen>
 
 </resources>
