Revert "base: moved battery to qs header bar"
This reverts commit 20ab3f0f410b363b0a78758c6e3e05cb6762afe3.

--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -53,7 +53,6 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         systemui:textAppearance="@style/TextAppearance.QS.Status"
-        android:paddingEnd="2dp"
-        android:visibility="gone"  />
+        android:paddingEnd="2dp" />
 
 </LinearLayout>
