--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -53,6 +53,7 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         systemui:textAppearance="@style/TextAppearance.QS.Status"
-        android:paddingEnd="2dp" />
+        android:paddingEnd="2dp" 
+        android:visibility="gone" />
 
 </LinearLayout>
