--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -63,7 +63,7 @@
             android:id="@+id/batteryRemainingIcon"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            systemui:textAppearance="@style/TextAppearance.QS.Status"
+            systemui:textAppearance="@style/TextAppearance.QS.StatusBattery"
             android:paddingEnd="2dp" />
      </LinearLayout>
 </LinearLayout>
