--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -63,6 +63,8 @@
             android:id="@+id/batteryRemainingIcon"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:paddingEnd="2dp"/>
+            systemui:textAppearance="@style/TextAppearance.QS.Status"
+            android:paddingEnd="2dp"
+            systemui:showDark="true"/>
      </LinearLayout>
 </LinearLayout>
