--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -64,7 +64,6 @@
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             systemui:textAppearance="@style/TextAppearance.QS.Status"
-            android:paddingEnd="2dp"
-            systemui:showDark="true"/>
+            android:paddingEnd="2dp"/>
      </LinearLayout>
 </LinearLayout>
