--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -234,6 +234,10 @@
         <item name="android:textColor">@color/header_qs_battery</item>
     </style>
 
+    <style name="TextAppearance.QS.Battery" parent="TextAppearance.QS.Status">
+         <item name="android:textColor">@android:color/white</item>
+     </style>
+
     <style name="TextAppearance.AppOpsDialog" />
 
     <style name="TextAppearance.AppOpsDialog.Title">
